--- a/TimelineClock/TimelineClock/TimelineClock.vcxproj.filters
+++ b/TimelineClock/TimelineClock/TimelineClock.vcxproj.filters
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="TimeLineClock.cpp" />
     <ClCompile Include="Log.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="TimelineClock.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="TimeLineClock.h" />
     <ClInclude Include="TypeDef.h" />
     <ClInclude Include="Header.h" />
     <ClInclude Include="Log.h" />
+    <ClInclude Include="TimelineClock.h" />
   </ItemGroup>
 </Project>
